--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -16,7 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Domain\Domain.csproj" />
+      <ProjectReference Include="..\Application.Share\Application.Share.csproj" />
     </ItemGroup>
 
 </Project>
