Move ApplicationUser to Domain

--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Domain.Share\Domain.Share.csproj" />
   </ItemGroup>
 
